--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Dimplist
 email: order@dimplist.com
 description: >- # this means to ignore newlines until "baseurl:"
   We help make your website simple. 
-baseurl: "/dmpls/" # the subpath of your site, e.g. /blog
-url: "https://mrtunes.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://getdimple.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 permalink: pretty
